kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stopyourgovernment-deployment
  labels:
    app: stopyourgovernment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stopyourgovernment
  template:
    metadata:
      labels:
        app: stopyourgovernment
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: stopyourgovernment-persistent-storage
          persistentVolumeClaim:
            claimName: stopyourgovernment-pvc
      containers:
        - name: stopyourgovernment-nginx
          image: stopyourgovernment
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
