kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camria-game-nginx
spec:
  selector:
    app: camria-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
