kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stopyourgovernment-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - stopyourgovernment.djnd.si
        - stopyourgovernment.danesjenovdan.si
      secretName: stopyourgovernment-nginx-tls
  rules:
    - host: stopyourgovernment.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stopyourgovernment-nginx
                port:
                  number: 80
    - host: stopyourgovernment.danesjenovdan.si
      http: *http_paths
